test/errors/auxiliary/good-base.jade
!!!
html
  head
    meta(charset="utf-8")
    block head
  body
    header
      .lorem
      .ipsum
    #content
      block content
    footer
      .dolor
      .sit
      .amet
